--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.7",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4",
+    "query-string": "^5.0.0"
   }
 }
