set up for deploy

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "passport": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "query-string": "^5.0.0"
+  },
+  "engines": {
+    "node": "8.1.3"
   }
 }
