--- a/ui-react/package.json
+++ b/ui-react/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.6.0",
-    "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-chartjs-2": "^2.5.7",
@@ -19,5 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "https://fccb-votingapp.herokuapp.com:3001"
 }
