--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "passport-twitter": "^1.0.4",
+    "path": "^0.12.7",
     "query-string": "^5.0.0"
   },
   "engines": {
