--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fcc backend project#6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "qinghang",
   "license": "ISC",
@@ -16,8 +17,7 @@
     "mongoose": "^4.11.7",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
-    "passport-twitter": "^1.0.4",
-    "query-string": "^5.0.0"
+    "passport-twitter": "^1.0.4"
   },
   "engines": {
     "node": "8.1.3"
